lib/rust/marty_bridge.dart/frb_generated.io.dart


  late final _store_dart_post_cobjectPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(DartPostCObjectFnType)>>(
        'store_dart_post_cobject',
      );
  late final _store_dart_post_cobject = _store_dart_post_cobjectPtr
      .asFunction<void Function(DartPostCObjectFnType)>();

  void wire__crate__api__create_selectable_credential(
    int port_,
    ffi.Pointer<wire_cst_credential> credential,
    int privacy_level,
  ) {
    return _wire__crate__api__create_selectable_credential(
      port_,
      credential,
      privacy_level,
    );
  }

  late final _wire__crate__api__create_selectable_credentialPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_credential>,
            ffi.Int32,
          )
        >
      >(
        'frbgen_privacyidea_authenticator_wire__crate__api__create_selectable_credential',
      );
  late final _wire__crate__api__create_selectable_credential =
      _wire__crate__api__create_selectable_credentialPtr
          .asFunction<
            void Function(int, ffi.Pointer<wire_cst_credential>, int)
          >();

  void wire__crate__api__credential_from_json(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> json,
  ) {
    return _wire__crate__api__credential_from_json(port_, json);
  }

  late final _wire__crate__api__credential_from_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >(
        'frbgen_privacyidea_authenticator_wire__crate__api__credential_from_json',
      );
  late final _wire__crate__api__credential_from_json =
      _wire__crate__api__credential_from_jsonPtr
          .asFunction<
            void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)
          >();

  void wire__crate__api__credential_to_json(
    int port_,
    ffi.Pointer<wire_cst_credential> credential,
  ) {
    return _wire__crate__api__credential_to_json(port_, credential);
  }

  late final _wire__crate__api__credential_to_jsonPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_credential>)
        >
      >(
        'frbgen_privacyidea_authenticator_wire__crate__api__credential_to_json',
      );
  late final _wire__crate__api__credential_to_json =
      _wire__crate__api__credential_to_jsonPtr
          .asFunction<void Function(int, ffi.Pointer<wire_cst_credential>)>();

  void wire__crate__api__get_credential_claims(
    int port_,
    ffi.Pointer<wire_cst_credential> credential,
  ) {
    return _wire__crate__api__get_credential_claims(port_, credential);
  }

  late final _wire__crate__api__get_credential_claimsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_credential>)
        >
      >(
        'frbgen_privacyidea_authenticator_wire__crate__api__get_credential_claims',
      );
  late final _wire__crate__api__get_credential_claims =
      _wire__crate__api__get_credential_claimsPtr
          .asFunction<void Function(int, ffi.Pointer<wire_cst_credential>)>();

  void wire__crate__api__group_credentials_by_issuer(
    int port_,
    ffi.Pointer<wire_cst_list_credential> credentials,
  ) {
    return _wire__crate__api__group_credentials_by_issuer(port_, credentials);
  }

  late final _wire__crate__api__group_credentials_by_issuerPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_list_credential>)
        >
      >(
        'frbgen_privacyidea_authenticator_wire__crate__api__group_credentials_by_issuer',
      );
  late final _wire__crate__api__group_credentials_by_issuer =
      _wire__crate__api__group_credentials_by_issuerPtr
          .asFunction<
            void Function(int, ffi.Pointer<wire_cst_list_credential>)
          >();

  void wire__crate__api__is_credential_expired(
    int port_,
    ffi.Pointer<wire_cst_credential> credential,
  ) {
    return _wire__crate__api__is_credential_expired(port_, credential);
  }

  late final _wire__crate__api__is_credential_expiredPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Int64, ffi.Pointer<wire_cst_credential>)
        >
      >(
        'frbgen_privacyidea_authenticator_wire__crate__api__is_credential_expired',
      );
  late final _wire__crate__api__is_credential_expired =
      _wire__crate__api__is_credential_expiredPtr
          .asFunction<void Function(int, ffi.Pointer<wire_cst_credential>)>();

  void wire__crate__api__parse_mdoc_credential(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_loose> cbor_bytes,
  ) {
    return _wire__crate__api__parse_mdoc_credential(port_, cbor_bytes);
  }

  late final _wire__crate__api__parse_mdoc_credentialPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_loose>,
          )
        >
      >(
        'frbgen_privacyidea_authenticator_wire__crate__api__parse_mdoc_credential',
      );
  late final _wire__crate__api__parse_mdoc_credential =
      _wire__crate__api__parse_mdoc_credentialPtr
          .asFunction<
            void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_loose>)
          >();

  void wire__crate__api__parse_sd_jwt_credential(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> sd_jwt,
  ) {
    return _wire__crate__api__parse_sd_jwt_credential(port_, sd_jwt);
  }

  late final _wire__crate__api__parse_sd_jwt_credentialPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >(
        'frbgen_privacyidea_authenticator_wire__crate__api__parse_sd_jwt_credential',
      );
  late final _wire__crate__api__parse_sd_jwt_credential =
      _wire__crate__api__parse_sd_jwt_credentialPtr
          .asFunction<
            void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)
          >();

  void wire__crate__api__parse_verifiable_credential(
    int port_,
    ffi.Pointer<wire_cst_list_prim_u_8_strict> json,
  ) {
    return _wire__crate__api__parse_verifiable_credential(port_, json);
  }

  late final _wire__crate__api__parse_verifiable_credentialPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_prim_u_8_strict>,
          )
        >
      >(
        'frbgen_privacyidea_authenticator_wire__crate__api__parse_verifiable_credential',
      );
  late final _wire__crate__api__parse_verifiable_credential =
      _wire__crate__api__parse_verifiable_credentialPtr
          .asFunction<
            void Function(int, ffi.Pointer<wire_cst_list_prim_u_8_strict>)
          >();

  void wire__crate__api__verify_and_attach_trust(
    int port_,
    ffi.Pointer<wire_cst_m_doc_credential> mdoc,
    ffi.Pointer<wire_cst_list_list_prim_u_8_strict> x5chain,
  ) {
    return _wire__crate__api__verify_and_attach_trust(port_, mdoc, x5chain);
  }

  late final _wire__crate__api__verify_and_attach_trustPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_m_doc_credential>,
            ffi.Pointer<wire_cst_list_list_prim_u_8_strict>,
          )
        >
      >(
        'frbgen_privacyidea_authenticator_wire__crate__api__verify_and_attach_trust',
      );
  late final _wire__crate__api__verify_and_attach_trust =
      _wire__crate__api__verify_and_attach_trustPtr
          .asFunction<
            void Function(
              int,
              ffi.Pointer<wire_cst_m_doc_credential>,
              ffi.Pointer<wire_cst_list_list_prim_u_8_strict>,
            )
          >();

  void wire__crate__api__verify_mdoc_trust_chain(
    int port_,
    ffi.Pointer<wire_cst_list_list_prim_u_8_strict> x5chain,
  ) {
    return _wire__crate__api__verify_mdoc_trust_chain(port_, x5chain);
  }

  late final _wire__crate__api__verify_mdoc_trust_chainPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(
            ffi.Int64,
            ffi.Pointer<wire_cst_list_list_prim_u_8_strict>,
          )
        >
      >(
        'frbgen_privacyidea_authenticator_wire__crate__api__verify_mdoc_trust_chain',
      );
  late final _wire__crate__api__verify_mdoc_trust_chain =
      _wire__crate__api__verify_mdoc_trust_chainPtr
          .asFunction<
            void Function(int, ffi.Pointer<wire_cst_list_list_prim_u_8_strict>)
          >();

  ffi.Pointer<wire_cst_credential> cst_new_box_autoadd_credential() {
    return _cst_new_box_autoadd_credential();
  }

  late final _cst_new_box_autoadd_credentialPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_credential> Function()>>(
        'frbgen_privacyidea_authenticator_cst_new_box_autoadd_credential',
      );
  late final _cst_new_box_autoadd_credential =
      _cst_new_box_autoadd_credentialPtr
          .asFunction<ffi.Pointer<wire_cst_credential> Function()>();

  ffi.Pointer<wire_cst_credential_status>
  cst_new_box_autoadd_credential_status() {
    return _cst_new_box_autoadd_credential_status();
  }

  late final _cst_new_box_autoadd_credential_statusPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<wire_cst_credential_status> Function()>
      >(
        'frbgen_privacyidea_authenticator_cst_new_box_autoadd_credential_status',
      );
  late final _cst_new_box_autoadd_credential_status =
      _cst_new_box_autoadd_credential_statusPtr
          .asFunction<ffi.Pointer<wire_cst_credential_status> Function()>();

  ffi.Pointer<wire_cst_m_doc_credential>
  cst_new_box_autoadd_m_doc_credential() {
    return _cst_new_box_autoadd_m_doc_credential();
  }

  late final _cst_new_box_autoadd_m_doc_credentialPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<wire_cst_m_doc_credential> Function()>
      >(
        'frbgen_privacyidea_authenticator_cst_new_box_autoadd_m_doc_credential',
      );
  late final _cst_new_box_autoadd_m_doc_credential =
      _cst_new_box_autoadd_m_doc_credentialPtr
          .asFunction<ffi.Pointer<wire_cst_m_doc_credential> Function()>();

  ffi.Pointer<wire_cst_proof> cst_new_box_autoadd_proof() {
    return _cst_new_box_autoadd_proof();
  }

  late final _cst_new_box_autoadd_proofPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_proof> Function()>>(
        'frbgen_privacyidea_authenticator_cst_new_box_autoadd_proof',
      );
  late final _cst_new_box_autoadd_proof = _cst_new_box_autoadd_proofPtr
      .asFunction<ffi.Pointer<wire_cst_proof> Function()>();

  ffi.Pointer<wire_cst_sd_jwt_credential>
  cst_new_box_autoadd_sd_jwt_credential() {
    return _cst_new_box_autoadd_sd_jwt_credential();
  }

  late final _cst_new_box_autoadd_sd_jwt_credentialPtr =
      _lookup<
        ffi.NativeFunction<ffi.Pointer<wire_cst_sd_jwt_credential> Function()>
      >(
        'frbgen_privacyidea_authenticator_cst_new_box_autoadd_sd_jwt_credential',
      );
  late final _cst_new_box_autoadd_sd_jwt_credential =
      _cst_new_box_autoadd_sd_jwt_credentialPtr
          .asFunction<ffi.Pointer<wire_cst_sd_jwt_credential> Function()>();

  ffi.Pointer<wire_cst_trust_info> cst_new_box_autoadd_trust_info() {
    return _cst_new_box_autoadd_trust_info();
  }

  late final _cst_new_box_autoadd_trust_infoPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<wire_cst_trust_info> Function()>>(
        'frbgen_privacyidea_authenticator_cst_new_box_autoadd_trust_info',
      );
  late final _cst_new_box_autoadd_trust_info =
      _cst_new_box_autoadd_trust_infoPtr
          .asFunction<ffi.Pointer<wire_cst_trust_info> Function()>();

  ffi.Pointer<wire_cst_verifiable_credential>
  cst_new_box_autoadd_verifiable_credential() {
    return _cst_new_box_autoadd_verifiable_credential();
  }
